--- a/index.html
+++ b/index.html
@@ -12,7 +12,22 @@
 
 <!-- Main area -->
 <main>
+<section class="container">
+<!-- Search area -->
+<div>
+    <div class="input-group mb-3 w-50 mx-auto my-4">
+        <input type="text" class="form-control" placeholder="Enter your book name.." aria-label="Enter your book name.." aria-describedby="button-addon2" id="search-value"> 
+        <button class="btn btn-outline-secondary" type="button" onclick="loadBook()">Search</button>
+    </div>
+</div>
+<div class="d-flex mb-4 mt-4" id="search-queries">
     
+</div>
+<div class="row row-cols-1 row-cols-md-4 g-4" id="books-container">
+
+</div>
+
+</section>
 </main>
 
 <!-- JS -->
