--- a/index.html
+++ b/index.html
@@ -15,18 +15,33 @@
 <section class="container">
 <!-- Search area -->
 <div>
-    <div class="input-group mb-3 w-50 mx-auto my-4">
+    <!-- Search Box -->
+    <div class="input-group mb-3 w-50 mx-auto my-4 shadow-sm">
         <input type="text" class="form-control" placeholder="Enter your book name.." aria-label="Enter your book name.." aria-describedby="button-addon2" id="search-value"> 
         <button class="btn btn-outline-secondary" type="button" onclick="loadBook()">Search</button>
     </div>
+    <!-- Loader -->
+    <div class="spinner-grow text-secondary mx-auto mt-5" role="status" id="loader" style="display: none;">
+        <span class="visually-hidden">Loading...</span>
+    </div>
+    <!-- Blank alert -->
+    <div id="alert" class="alert alert-danger w-50 mx-auto mt-5" role="alert" style="display: none;">
+       Please enter a book name!!   
+    </div>
+    <!-- No result -->
+    <div id="no-result" class="text-center" style="display: none;">
+       <img src="img/no_result.png" alt="" width="40%"> 
+       <h5>No result found!!</h5>
+    </div>
 </div>
-<div class="d-flex mb-4 mt-4" id="search-queries">
-    
+<div id="result" style="display: none;">
+    <!-- Search queries -->
+    <div class="d-flex mb-4 mt-4" id="search-queries">
+    </div>
+    <!-- Search result -->
+    <div class="row row-cols-1 row-cols-md-4 g-4" id="books-container">
+    </div>
 </div>
-<div class="row row-cols-1 row-cols-md-4 g-4" id="books-container">
-
-</div>
-
 </section>
 </main>
 
